--- a/problem2/Makefile
+++ b/problem2/Makefile
@@ -1,11 +1,11 @@
-problem1: main.o CPU.o FIFOq.o PCB.o
-	gcc -o problem2 main.o CPU.o FIFOq.o PCB.o
+problem1: main.o OS.o FIFOq.o PCB.o
+	gcc -o problem2 main.o OS.o FIFOq.o PCB.o
 
 main.o:
 	gcc -c main.c
 
-CPU.o:
-	gcc -c CPU.c
+OS.o:
+	gcc -c OS.c
 
 FIFOq.o:
 	gcc -c FIFOq.c
